# Finetuning-LLM

./: 01_Why_finetuning_lab.ipynb  pyproject.toml
Evaluation/: 06_Evaluation_lab.ipynb
Instruction fine tuning/: 03_Instruction_tuning_lab_student.ipynb
Training/: 05_Training_lab.ipynb
