[tool.poetry]
name = "fine-tuning-llm"
version = "0.1.0"
description = ""
authors = ["Saravanakumar Gopalakrishnan"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
lamini = "^2.0.6"
ipykernel = "^6.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
